# veridex

./: .dockerignore  .env.example  .gitignore  Dockerfile.agent  Dockerfile.api  README.md  compose.coolify.yml  pyproject.toml
.omc/research/: cp1-convergence-probe.md  cp1-leadlag-probe.md
apps/web/: .dockerignore  .env.example  .gitignore  .npmrc  Dockerfile  eslint.config.mjs  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.json  vitest.config.mts  vitest.setup.ts
contracts/: veridex_api.contract.ts
contracts/fixtures/: competition_state.json  feed_health.json  leaderboard.json  maker_arena_result.json  proof_artifact.json  studio_mm_deploy_payload.json  verify_response.json
deploy/coolify/: backup-restore.md  provisioning-inventory.md  runbook.md
docs/: architecture.md  demo-video-script.md  deploy-judges.md  deploy-your-own-agent.md  faq.md  mm-research-findings.md  operator-runbook.md  research-journey.md  submission.md  technical-deep-dive.md  txline-feedback.md
docs/maker/: maker-ui-design-brief.md  r15-capture-runbook.md  r3-live-recorder-runbook.md  r3-r4-recorder-checklist.md  r4a-clobv2-wire-contract.md  r4a-dust-execution-runbook.md  r4b-strategy-runbook.md
eval_protocols/: README.md
scripts/: __init__.py  demo_phase1.py  demo_phase2d.py  gen_maker_fixture.py  live_txline_capture_accept.sh  polymarket_smoke.py  restore_drill.sh  seed_official_replay_league.py  smoke_public.sh  smoke_public_ws.py  test_maker_arena_image.sh  txline_live_capture_accept.py
scripts/fixtures/: build_demo_pack_real.py
scripts/maker/: __init__.py  capture_and_pin.py  capture_sx.sh  convergence_probe.py  dust_execution.py  leadlag_probe.py  live_monitor.py  live_recorder.py  pmxt_archive_pull.py  sx_bet_poller.py  ws_leadlag_monitor.py
scripts/txline_live/: .gitignore  access_matrix.py  anchor_memo_live.py  backfill.py  build_resolved_market_lookup.py  capture.py  cp1_backfill.py  cp1_probe.py  normalize_demo.py  package-lock.json  package.json  pilot0.py  record.py  run001.py  run002_vvv.py  run_event_fork_probe.py  subscribe-mainnet.ts  subscribe.ts  tsconfig.json  wc-qf-fixtures.json
spec/: spec-architecture-phase1-build.md  spec-process-phase0-adaptation-spike.md
tests/: _arena_fixtures.py  _sharp_momentum_tapes.py  conftest.py  mm_strategy_ablation_harness.py  test_access_matrix.py  test_agent_loop.py  test_agentos_adapter.py  test_agents_directory.py  test_agents_roster_api.py  test_anchor.py  test_anchor_explorer_url.py  test_api.py  test_api_contract.py  test_api_execution_fields.py  test_api_explain.py  test_api_feed_health.py  test_api_inspector.py  test_api_leaderboard_confidence.py  test_api_verify.py  test_arena_fairness.py  test_backfill.py  test_backfill_operator.py  test_backtest_pre_match.py  test_backtest_report.py  test_backtest_runner.py  test_baseline_scorable.py  test_baseline_scored_clv.py  test_baselines.py  test_calibration_report.py  test_checks_integrity.py  test_checks_reconciliation.py  test_checks_taxonomy.py  test_circuit_breaker.py  test_clv_confidence.py  test_competition_api.py  test_competition_arena_api.py  test_competition_auth.py  test_competition_discovery.py  test_competition_events.py  test_competition_integration.py  (+227 more)
tests/event_probe/: test_aggregate.py  test_compute.py  test_config.py  test_confirmed_extraction.py  test_confirmed_lifecycle.py  test_extraction.py  test_runner.py  test_series.py  test_slices.py
tests/fixtures/: gamma_event_ambiguous.json  gamma_event_prt_hrv.json  gamma_event_prt_hrv_base_no_ou.json  gamma_event_prt_hrv_more_markets.json  gamma_event_usa_bih.json  gamma_malformed_missing_tokens.json  gamma_more_markets_ou_ambiguous.json  gamma_wc_final.json  gamma_wc_total_goals.json  polymarket_ws_frames.py  txline_native_messages.json  txline_odds_sample.json  wd2_momentum_replay.json
tests/golden/: generate_golden.py  run_baseline_error.json  run_baseline_happy.json
veridex/: __init__.py  clv_confidence.py  config.py  leaderboard.py  provenance.py  public_agent.py  public_agent_backfill.py  public_projection.py  rank_guards.py  scoring.py  store.py
veridex/api/: __init__.py  auth_privy.py  demo_fixtures.py  deploy.py  fixture_labels.py  maker_router.py  readiness.py  router.py  schemas.py  server.py  ws.py
veridex/backtest/: __init__.py  baseline_agents.py  baselines.py  benchmark.py  calibration.py  evaluation.py  market_filter.py  pre_match.py  report.py  runner.py  venue_behavior_report.py  vvv_report.py
veridex/chain/: anchor.py  merkle.py  txline_authenticity.py
veridex/checks/: build.py  clv.py  result.py
veridex/competition/: __init__.py  events.py  models.py  service.py
veridex/deploy/: __init__.py  attempt.py  bundled_replay.json  bundled_replay.py  instance.py  preflight.py
veridex/dust_execution/: __init__.py  analysis.py  clobv2_gate.py  contracts.py  emergency.py  facade.py  feesnapshot.py  keyless_read_client.py  l2_transport.py  ledger.py  manifest.py  mode_b_write_port.py  noncrossing.py  operator_interlock_store.py  order_commitment.py  privy_control_plane.py  privy_provisioning.py  provisioning_record.py  reconcile.py  resting_order.py  risk.py  runner.py  session_state.py  signer.py  signing_compiler.py  sizing.py  wallet_binding.py
veridex/execution/: __init__.py  legibility.py  models.py  runner.py
veridex/explainer/: __init__.py  glossary.py  proof_explainer.py
veridex/ingest/: backfill.py  capture_chain.py  feed_health.py  live_client.py  marketstate.py  odds_proof.py  recorder.py  replay_catalog.py  replay_pack.py  txline_auth.py  txline_client.py  txline_normalize.py
veridex/law/: __init__.py  edge.py  recompute.py
veridex/live_recorder/: __init__.py  alignment.py  analysis.py  contracts.py  executability.py  recorder.py  replay.py  runner.py  sources.py  top_of_book.py  ws_book_source.py
veridex/maker/: agents.py  basis.py  capture.py  config.py  contracts.py  diagnostic.py  falsification.py  leaderboard.py  mapping.py  markout.py  r2_bracket.py  r2_suite.py  (+9 more)
veridex_agent/: __init__.py  cli.py  config.py  run.py  sample_agent.toml
(+594 files in other folders)
