[project]
name = "veridex"
version = "0.0.0"
description = "Veridex — TxLINE Agent Proof Arena"
requires-python = ">=3.11"
dependencies = ["pydantic>=2", "pydantic-settings>=2"]

# WD-3: the standalone agent ships as an installable console script (Dockerfile.agent pip-installs it).
[project.scripts]
veridex-agent = "veridex_agent.cli:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["veridex*", "veridex_agent*"]

[project.optional-dependencies]
# Postgres persistence (PostgresStore) — lazy-imported; not needed for the offline suite.
postgres = ["psycopg[binary]>=3"]
# LLM agent layer (Agno via OpenRouter, OpenAI-compatible) — lazy-imported behind a seam;
# not needed for the offline suite. openai is the client Agno's OpenRouter model uses.
agent = ["agno", "openai"]
# Live TxLINE SSE client (B2) — async HTTP.
live = ["httpx>=0.27"]
# FastAPI serving layer (B11 demo surface) — async read + trigger endpoints over the Store.
api = ["fastapi>=0.115", "uvicorn>=0.30"]

[dependency-groups]
dev = ["pytest>=8", "pytest-asyncio>=0.24", "ruff>=0.6", "mypy>=1.11"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-q"
# async shell uses asyncio; auto mode lets plain `async def test_*` run without per-test markers.
asyncio_mode = "auto"

[tool.ruff]
line-length = 120
target-version = "py311"
# Phase-0 live-integration SPIKE scripts (reference/evidence only, not maintained package code).
extend-exclude = ["scripts/txline_live"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP", "SIM"]
# E501: line length enforced by the formatter.
# UP042: `class X(str, Enum)` is a deliberate, behavior-stable choice (StrEnum changes
#        __str__/serialization semantics); migration intentionally deferred.
ignore = ["E501", "UP042"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_defs = true
check_untyped_defs = true
no_implicit_optional = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[[tool.mypy.overrides]]
# Optional, lazily-imported deps — don't fail typing when they're absent from the base install.
module = ["agno.*", "psycopg.*"]
ignore_missing_imports = true
